--- a/sources/sections/aa-abstract-conformance.adoc
+++ b/sources/sections/aa-abstract-conformance.adoc
@@ -86,7 +86,7 @@ the test suite structure.
 
 ==== Requirement classes and the Conformance Test classes in correspondence
 
-The requirements classes shall be in a one-to-one correspondence to the conformance
+The requirements classes _SHALL_ be in a one-to-one correspondence to the conformance
 test classes, and thus to the various certificate of conformance types possible for
 a candidate implementation.
 
@@ -97,7 +97,7 @@ a candidate implementation.
 
 ==== No Optional Elements in Requirements classes
 
-A Conformance class shall not contain any optional conformance tests.
+A Conformance class _SHALL_ not contain any optional conformance tests.
 
 . Test Purpose: Verify that this requirement is satisfied.
 . Test Method: Inspect the document to verify the above.
@@ -106,7 +106,7 @@ A Conformance class shall not contain any optional conformance tests.
 
 ==== Certificate of conformance specifies all parameters used
 
-A certificate of conformance shall specify all parameter values used to pass the
+A certificate of conformance _SHALL_ specify all parameter values used to pass the
 tests in its conformance test class.
 
 . Test Purpose: Verify that this requirement is satisfied.
@@ -116,7 +116,7 @@ tests in its conformance test class.
 
 ==== Conformance class tests only one requirements class
 
-A Conformance class shall explicitly test only requirements from a single
+A Conformance class _SHALL_ explicitly test only requirements from a single
 requirements class.
 
 . Test Purpose: Verify that this requirement is satisfied.
@@ -127,7 +127,7 @@ requirements class.
 ==== Conformance class specifies all dependencies
 
 [[annex-2-1]]
-A Conformance class shall specify any other conformance class upon which it is
+A Conformance class _SHALL_ specify any other conformance class upon which it is
 dependent and that other conformance class shall be used to test the specified
 dependency.
 
@@ -140,9 +140,9 @@ dependency.
 
 If a requirements class is imported from another standard for use within a
 standard conformant to this standard, and if any imported requirement is
-"optional," then that requirement shall be factored out as a separate requirements
+"optional," then that requirement _SHALL_ be factored out as a separate requirements
 class in the profile of that imported standard used in the conformant standard.
-Each such used requirements class shall be a conformance class of the source
+Each such used requirements class _SHALL_ be a conformance class of the source
 standard or a combination of conformance classes of the source standard or standards.
 
 . Test Purpose: Verify that this requirement is satisfied.
@@ -153,7 +153,7 @@ standard or a combination of conformance classes of the source standard or stand
 ==== Naming consistency
 
 For the sake of consistency and readability, all requirements classes and all
-conformance test classes shall be explicitly named, with corresponding requirements
+conformance test classes _SHALL_ be explicitly named, with corresponding requirements
 classes and conformance test classes having similar names.
 
 . Test Purpose: Verify that this requirement is satisfied.
@@ -163,9 +163,9 @@ classes and conformance test classes having similar names.
 
 ==== Requirements in one and only one requirements class
 
-Each requirement in the standard shall be contained in one and only one requirements
+Each requirement in the standard _SHALL_ be contained in one and only one requirements
 class. Inclusion of any requirement in a requirements class by a conformance class
-shall imply inclusion of all requirements in its class (as a dependency).
+_SHALL_ imply inclusion of all requirements in its class (as a dependency).
 
 . Test Purpose: Verify that this requirement is satisfied.
 . Test Method: Inspect the document to verify the above.
@@ -175,8 +175,8 @@ shall imply inclusion of all requirements in its class (as a dependency).
 ==== Co-dependent Requirements are in the same requirements class
 
 If any two requirements or two requirements modules are co-dependent (each dependent
-on the other) then they shall be in the same requirements class. If any two
-requirements classes are co-dependent, they shall be merged into a single class.
+on the other) then they _SHALL_ be in the same requirements class. If any two
+requirements classes are co-dependent, they _SHALL_ be merged into a single class.
 
 . Test Purpose: Verify that this requirement is satisfied.
 . Test Method: Inspect the document to verify the above.
@@ -198,7 +198,7 @@ All general recommendations shall be in the core.
 
 ==== Requirements follow rules of inheritance
 
-No requirements class shall redefine the requirements of its dependencies, unless
+No requirements class _SHALL_ redefine the requirements of its dependencies, unless
 that redefinition is for an entity derived from but not contained in those
 dependencies.
 
@@ -209,7 +209,7 @@ dependencies.
 
 ==== Profiles are expressed as sets of conformance classes
 
-The conformance tests for a profile of a standard shall be defined as the union
+The conformance tests for a profile of a standard _SHALL_ be defined as the union
 of a list of conformance classes that are to be satisfied by that profile's
 standardization targets.
 
@@ -220,7 +220,7 @@ standardization targets.
 
 ==== There is a named Core requirements class
 
-Every standard shall define and identify a core set of requirements as a
+Every standard _SHALL_ define and identify a core set of requirements as a
 separate conformance class.
 
 . Test Purpose: Verify that this requirement is satisfied.
@@ -230,18 +230,16 @@ separate conformance class.
 
 ==== General conditions are in the core
 
-Every other requirements class in a standard shall have a standardization
-target type which is a subtype of that of the core and shall have the core as a
-direct dependency.
+All general recommendations for a standard SHALL be in the core.
 
 . Test Purpose: Verify that this requirement is satisfied.
 . Test Method: Inspect the document to verify the above.
-. Reference: <<req-22>>
+. Reference: <<req-21>>
 . Test Type: Conformance.
 
 ==== Every extension has a consistent target type
 
-Every other requirements class in a standard shall have a standardization
+Every non-core requirements class in a standard _SHALL_ have a standardization
 target type which is a subtype of that of the core and shall have the core as a
 direct dependency.
 
@@ -252,7 +250,7 @@ direct dependency.
 
 ==== A standard is a core plus some number of extensions
 
-Each standard conformant to the ModSpec shall consist of the core and some
+Each standard conformant to the ModSpec _SHALL_ consist of the core and some
 number of requirements classes defined as extensions to that core.
 
 . Test Purpose: Verify that this requirement is satisfied.
@@ -262,7 +260,7 @@ number of requirements classes defined as extensions to that core.
 
 ==== Conformance to this ModSpec is required for any extensions
 
-A standard conformant to the ModSpec shall require all conformant extensions
+A standard conformant to the ModSpec _SHALL_ require all conformant extensions
 to itself to be conformant to the ModSpec.
 
 . Test Purpose: Verify that this requirement is satisfied.
@@ -272,8 +270,8 @@ to itself to be conformant to the ModSpec.
 
 ==== Future extensions cannot be restricted
 
-A standard conformant to the ModSpec shall never restrict in any manner
-future, logically-valid extensions of its standardization targets.
+A standard conformant to the ModSpec _SHALL_ never restrict in any manner
+future, logically-valid extensions of its standardization target types.
 
 . Test Purpose: Verify that this requirement is satisfied.
 . Test Method: Inspect the document to verify the above.
@@ -282,8 +280,7 @@ future, logically-valid extensions of its standardization targets.
 
 ==== Optional requirements are organized as requirements classes
 
-The only optional requirements acceptable in a standard conformant to this
-standard shall be expressible as a list of conformance classes to be passed.
+The only conditional (optional) requirements acceptable in a standard conformant with the ModSpec _SHALL_ be expressible as a list of conformance classes to be passed.
 
 . Test Purpose: Verify that this requirement is satisfied.
 . Test Method: Inspect the document to verify the above.
@@ -292,7 +289,7 @@ standard shall be expressible as a list of conformance classes to be passed.
 
 ==== Requirements classes intersect overlap only by reference
 
-The common portion of any two requirements classes shall consist only of references
+The common portion of any two requirements classes _SHALL_ consist only of references
 to other requirements classes.
 
 . Test Purpose: Verify that this requirement is satisfied.
