--- a/README.adoc
+++ b/README.adoc
@@ -6,16 +6,17 @@ image:https://github.com/opengeospatial/ogc-modspec/workflows/generate/badge.svg
 
 == General
 
-This repository contains the ModSpec standards, including:
+This repository contains the revision to the ModSpec core standard and related parts, including:
 
-* The original 08-131r3 as approved in 2013. This is a Word document showing all the initial edits and comments used for discussion
+* The original 08-131r3 as approved in 2009. This is a Word document showing all the initial edits circa mid 2024 as well as comments used for discussion.
 * Issues for discussion and resolution related to the proposed changes
-* A modspec Git project
+* Version 1.1 release notes
+* The ModSpec content encoded using the OGC Metanorma template
 
 == Structure
 
 `sources/`::
-source of documents and models
+source of documents, images, and models
 
 `_site/`::
 (automatically generated, in the `gh-pages` branch) published document.
@@ -51,22 +52,9 @@ version by:
 docker run -v "$(pwd)":/metanorma -v ${HOME}/.fontlist/fonts/:/config/fonts metanorma/metanorma metanorma compile --agree-to-terms -t ogc -x xml,html,pdf document.adoc
 ----
 
-== UML model definitions
-
-This repository uses the LutaML-UML syntax in specifying the ModSpec model.
-
-The models are located here:
-
-* `sources/models/ogc-modspec.lutaml`
-
-Documentation of the language is found here:
-
-* https://github.com/lutaml/lutaml/blob/main/LUTAML.adoc
-
-
 == License
 
-These documents are published by OGC; the copyright of such
-documents (as well as their converted text) remain unchanged.
+These documents are published by the OGC. The copyright of such
+documents remain unchanged.
 
 All other code and information, copyright Ribose.
