--- a/sources/part1/01-scope.adoc
+++ b/sources/part1/01-scope.adoc
@@ -3,8 +3,8 @@
 The ModSpec defines characteristics and structure for the specification of Standards 
 that will encourage implementation by minimizing difficulty determining
 requirements, mimicking implementation structure and maximizing usability and
-interoperability. Part 1 of the ModSpec defines the requirements for using UML. The use case is if the organizing mechanism for the data model 
-used in a standard is an object model, then the mapping from parts of the model to the requirements classes should follow the logical mechanism described in Part 1 of the ModSpec
+interoperability. Part 1 of the ModSpec defines the requirement class for using UML. The use case is if the organizing mechanism for the data model 
+used in a standard is an object model, then the mapping from parts of the model to the requirements classes should follow the logical mechanism described in Part 1 of the ModSpec.
 
 [[introduction]]
 === Introduction
@@ -26,6 +26,6 @@ parallel.
 
 Version 1.1 of the ModSpec is split into a Core standard and multiple Parts. These are:
 
-- Core: contains all the core requirements and informational text that define the model and internal structure of a standard.
+- Core: Contains all the core requirements and informational text that define the model and internal structure of a standard.
 - Part 1: UML Model requirements 
 - Part 2: XML Model and Schematron requirements 
