--- a/sources/part1/00-preface.adoc
+++ b/sources/part1/00-preface.adoc
@@ -3,7 +3,7 @@
 
 This OGC member developed and approved document, referred to as the `ModSpec: Part 1`, defines an optional requirements class for UML
 
-The ModSpec: Core Stadnard defines a model and related requirements 
+The ModSpec: Core Standard defines a model and related requirements 
 and recommendations for writing and structuring modular standards documents. Further, this model is designed to enable 
 consistent and verifiable testing of implementations of a standard that claim conformance. The ModSpec is a meta-standard: 
 A standard specifying requirements for crafting and documenting modular and testable standards. 
@@ -13,11 +13,11 @@ The goals of using the ModSpec are:
 - To define characteristics and a structure for the development of modular standards which will minimize the difficulty in writing testable standards while maximizing usability and interoperability.
 - To ensure that a standard specifies requirements in a common and consistent manner and that these requirements are testable.
 
-NOTE: Historically, this document has been known and abbreviated as the "ModSpec". For continuity and ease of understanding this document may also be refered to as the "OGC ModSpec".
+NOTE: Historically, this document has been known and abbreviated as the "ModSpec". For continuity and ease of understanding this document may also be referred to as the "OGC ModSpec".
 
-Suggested additions, changes, and comments on this this document are welcome and
-encouraged. Such suggestions may be submitted through the OGC Change Request System
-(http://www.opengeospatial.org/standards/cr) or by creating an issue in the GitHub repository for this document (https://github.com/opengeospatial/ogc-modspec).
+Suggested additions, changes, and comments on this document are welcome and
+encouraged. Such suggestions may be submitted by creating an issue in the GitHub 
+repository for this document (https://github.com/opengeospatial/ogc-modspec).
 
 [.preface]
 == Document terms and definitions
@@ -37,7 +37,6 @@ The following OGC Members participated in editing this document:
 |===
 ^h| Person ^h| Organization Represented
 | Carl Reed | Carl Reed & Associates
-| Chuck Heazel | Heazeltech
 |===
 
 [.preface]
@@ -48,6 +47,7 @@ The following OGC Members contributed and particpated in developing Version 1.1 
 [%unnumbered]
 |===
 ^h| Person ^h| Organization Represented
+| Carl Reed, PhD| Carl Reed
 | Chuck Heazel | Heazeltech
 | Jeff Yutzler | ImageMatters
 |===
