Make consistent with Core and Part 1

--- a/sources/part2/00-preface.adoc
+++ b/sources/part2/00-preface.adoc
@@ -1,17 +1,23 @@
 [.preface]
 == Preface
 
-This OGC member developed and approved document defines a model and related requirements and recommendations for writing and structuring modular standards documents. Further, this model is designed to enable the consistent and verifiable testing of implementations of a standard that claim conformance.
+This OGC member developed and approved document, referred to as the `ModSpec: Part 2`, defines an optional requirements class for XML
 
-The goal is to ensure that a standard specifies requirements in a common and consistent manner and that these requirements are testable.
+The ModSpec: Core Standard defines a model and related requirements 
+and recommendations for writing and structuring modular standards documents. Further, this model is designed to enable 
+consistent and verifiable testing of implementations of a standard that claim conformance. The ModSpec is a meta-standard: 
+A standard specifying requirements for crafting and documenting modular and testable standards. 
 
-NOTE: For OGC only: Any new OGC Standard, abstract specification that contains requirements, or major revision of an existing OGC Standard shall comply with the requirements stated in this document.
+The goals of using the ModSpec are:
 
-NOTE: Historically, this document has been known and abbreviated as the "ModSpec". For continuity and ease of understanding this document may also be refered to as the "OGC ModSpec".
+- To define characteristics and a structure for the development of modular standards which will minimize the difficulty in writing testable standards while maximizing usability and interoperability.
+- To ensure that a standard specifies requirements in a common and consistent manner and that these requirements are testable.
 
-Suggested additions, changes, and comments on this this document are welcome and
-encouraged. Such suggestions may be submitted through the OGC Change Request System
-(http://www.opengeospatial.org/standards/cr) or by creating an issue in the GitHub repository for this document (https://github.com/opengeospatial/ogc-modspec).
+NOTE: Historically, this document has been known and abbreviated as the "ModSpec". For continuity and ease of understanding this document may also be referred to as the "OGC ModSpec".
+
+Suggested additions, changes, and comments on this document are welcome and
+encouraged. Such suggestions may be submitted by creating an issue in the GitHub 
+repository for this document (https://github.com/opengeospatial/ogc-modspec).
 
 [.preface]
 == Document terms and definitions
@@ -31,32 +37,24 @@ The following OGC Members participated in editing this document:
 |===
 ^h| Person ^h| Organization Represented
 | Carl Reed | Carl Reed & Associates
-| John Herring | Oracle
+| John Herring, PhD | Oracle
 |===
 
 [.preface]
 == Document Contributors
 
-The following OGC Members contributed and particpated in developing Version 2 of the ModSpec.
+The following OGC Members contributed and particpated in developing Version 1.1 of the ModSpec.
 
 [%unnumbered]
 |===
 ^h| Person ^h| Organization Represented
-| Simon Cox | CSIRO and OGC Fellow
+| Carl Reed, PhD| Carl Reed
 | Chuck Heazel | Heazeltech
-| Clemens Portele | interactive instruments GmbH
 | Jeff Yutzler | ImageMatters
 |===
+
 
 [.preface]
 == Revision history
 
 This is the second normative version of this document.
-
-[.preface]
-== Future work
-
-Improvements to this document will be made based on implementation and changing technical requirements. Planned extensions include:
-
-- ModSpec Part providing requirements and recommendations for specifying requirements and conformance tests using RDFS, SHACL, and OWL.
-- ModSpec Part providing requirements and recommendations for specifying requirements and conformance tests using JSON.
