--- a/sources/part2/00-preface.adoc
+++ b/sources/part2/00-preface.adoc
@@ -1,7 +1,7 @@
 [.preface]
 == Preface
 
-This OGC member developed and approved document, referred to as the `ModSpec: Part 2`, defines an optional requirements class for XML
+This OGC member developed and approved document, referred to as the `ModSpec: Part 2`, defines an optional requirements class for the XML model extension the ModSpec core.
 
 The ModSpec: Core Standard defines a model and related requirements 
 and recommendations for writing and structuring modular standards documents. Further, this model is designed to enable 
